load("@swc_cargo_workspace_index//:defs.bzl", "crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_proc_macro", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_proc_macro(
    name = "string_enum",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//crates/swc_macros_common",
    ] + crate_deps([
        "pmutil",
        "proc-macro2",
        "quote",
        "syn",
    ]),
)

rust_test(
    name = "string_enum_test",
    crate = ":string_enum",
    deps = crate_deps(["serde"]),
)
