load("@crate_index_cargo_workspace//:defs.bzl", "crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")

package(default_visibility = ["//visibility:public"])

# This will run the build script from the root of the workspace, and
# collect the outputs.
cargo_build_script(
    name = "build_rs",
    srcs = ["build.rs"],
    data = [":words.txt"],
    deps = crate_deps(["string_cache_codegen"]),
)

# Default build target without enabling any features explicitly.
rust_library(
    name = "swc_atoms",
    srcs = ["src/lib.rs"],
    version = "0.4.24",
    deps = [":build_rs"] + crate_deps([
        "once_cell",
        "rustc-hash",
        "serde",
        "string_cache",
        "triomphe",
    ]),
)
