load("@swc_cargo_workspace_index//:defs.bzl", "crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "swc_ecma_ext_transforms",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//crates/swc_atoms",
        "//crates/swc_common",
        "//crates/swc_ecma_ast",
        "//crates/swc_ecma_utils",
        "//crates/swc_ecma_visit",
    ] + crate_deps([
        "phf",
    ]),
)
