load("@swc_cargo_workspace_index//:defs.bzl", "crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

base_deps = [
    "//crates/swc_atoms",
] + crate_deps([
    "indexmap",
    "num_cpus",
    "once_cell",
    "tracing",
    "unicode-id",
])

rust_library(
    name = "swc_ecma_utils",
    srcs = glob(["src/**/*.rs"]),
    deps = base_deps + [
        "//crates/swc_common",
        "//crates/swc_ecma_ast",
        "//crates/swc_ecma_visit",
    ],
)

rust_library(
    name = "swc_ecma_utils_concurrent",
    srcs = glob(["src/**/*.rs"]),
    crate_features = ["concurrent"],
    crate_name = "swc_ecma_utils",
    deps = base_deps + [
        "//crates/swc_ecma_ast:swc_ecma_ast-common_concurrent",
        "//crates/swc_common:swc_common_concurrent",
        "//crates/swc_ecma_visit:swc_ecma_visit-common_concurrent",
    ] + crate_deps([
        "rayon",
    ]),
)
