load("@swc_cargo_workspace_index//:defs.bzl", "crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_proc_macro")

package(default_visibility = ["//visibility:public"])

rust_proc_macro(
    name = "swc_eq_ignore_macros",
    srcs = glob(["src/**/*.rs"]),
    version = "0.1.1",
    deps = crate_deps([
        "pmutil",
        "proc-macro2",
        "quote",
        "syn",
    ]),
)
