load("@swc_cargo_workspace_index//:defs.bzl", "crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_proc_macro")

package(default_visibility = ["//visibility:public"])

rust_proc_macro(
    name = "swc_plugin_macro",
    srcs = ["src/lib.rs"],
    deps = crate_deps([
        "proc-macro2",
        "quote",
        "syn",
    ]),
)
