load("@swc_cargo_workspace_index//:defs.bzl", "crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "swc_visit",
    srcs = glob(["src/**/*.rs"]),
    proc_macro_deps = ["//crates/swc_visit_macros"],
    version = "0.5.3",
    deps = crate_deps([
        "either",
    ]),
)

rust_test(
    name = "swc_visit_test",
    crate = ":swc_visit",
)
